tests/negative/neg_select_no_channel_arm.safe
-- Test: neg_select_no_channel_arm
-- Description: Select statements need at least one channel arm.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.4.p33:7a94ab51
-- Expected: REJECT source_frontend_error

package select_no_channel_arm_test

   task worker

      loop
         select
            delay 0.10

